# muscat

./: Cargo.toml  README.md  config.jsonc  example.json  shell.nix
src/: func.rs  gui.rs  main.rs
src/func/: func.rs  mod.rs  process.rs  traits.rs
