[package]
name = "muscat"
version = "0.1.0"
edition = "2024"

[dependencies]
mustache = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
resolve-path = "0.1.0"         
iced = "0.14.0"
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 2 

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
