[package]
name = "muscat"
version = "0.1.0"
edition = "2024"

[dependencies]
mustache = "0.9.0"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
json5 = "1.3.1"

resolve-path = "0.1.0"         
iced = { version = "0.14.0" }
clap = { version = "4.0", features = ["derive"] }
hex_color = "3.0.0"
rfd = { version = "0.17.2", default-features = false, features = ["gtk3"] }

[profile.release]
opt-level = 2 

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
